--- a/app/app/src/main/res/drawable/btn_dashboard.xml
+++ b/app/app/src/main/res/drawable/btn_dashboard.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="30dp"/>
-    <solid android:color="@color/btn_dashboard"/>
+    <solid android:color="@color/gray"/>
     <stroke
         android:width="3dp"
         android:color="#9A9A9A"
