--- a/app/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/app/src/main/res/layout/activity_dashboard.xml
@@ -1,16 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context=".dashboard">
+
+    <LinearLayout
+        android:id="@+id/dashboard_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="60dp"
+        android:background="@drawable/pattern_background"
+        android:orientation="vertical">
+    </LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/dash_menu_bar_container"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_gravity="bottom"
+        android:background="@drawable/dashboard_bar"
+        app:itemRippleColor="@color/gray"
+        app:itemIconTint="@color/loanppi"
+        app:itemTextColor="@color/loanppi">
+
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+
+
+
+
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dashboard"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="bottom|center_horizontal"
-    android:gravity="bottom|center_horizontal"
     android:orientation="vertical"
-    tools:context=".dashboard"
-    tools:layout_editor_absoluteX="1dp"
-    tools:layout_editor_absoluteY="1dp">
+    tools:context=".dashboard">
 
     <LinearLayout
         android:id="@+id/dashboard_container"
@@ -25,7 +57,8 @@
         android:id="@+id/dash_menu_bar"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:background="@drawable/dashboard_bar">
+        android:background="@drawable/dashboard_bar"
+        android:layout_gravity="bottom">
 
         <TextView
             android:id="@+id/bar_icon_home"
@@ -128,4 +161,4 @@
             app:layout_constraintStart_toStartOf="@+id/bar_icon_my_business"
             app:layout_constraintTop_toBottomOf="@+id/bar_icon_my_business" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-</LinearLayout>
+</LinearLayout>-->
