--- a/app/app/src/main/res/menu/menu_registered.xml
+++ b/app/app/src/main/res/menu/menu_registered.xml
@@ -4,5 +4,6 @@
     <item android:id="@+id/menu_blank"
         android:title="" />
     <item android:id="@+id/menu_signout"
-        android:title="@string/signout" />
+        android:title="@string/signout"
+        android:icon="@drawable/ic_baseline_exit_to_app_24"/>
 </menu>
