--- a/app/app/src/main/res/layout/fragment_my_loan.xml
+++ b/app/app/src/main/res/layout/fragment_my_loan.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main_worker">
+    tools:context=".my_loan">
 
     <ScrollView
         android:id="@+id/loan_scroll"
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:background="@color/background_inside"
             android:paddingBottom="16dp"
-            tools:context=".dashboard">
+            tools:context=".my_loan">
 
             <TextView
                 android:id="@+id/txt_title_my_loan"
