--- a/app/app/src/main/res/menu/worker_dash_bar.xml
+++ b/app/app/src/main/res/menu/worker_dash_bar.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/nav_w_home"
-        android:title="Inicio"
+        android:title="@string/txt_home"
         android:icon="@drawable/ic_outline_home_24">
     </item>
     <item android:id="@+id/nav_w_lend"
-        android:title="Invertir"
+        android:title="@string/txt_lend"
         android:icon="@drawable/ic_outline_attach_money_24">
     </item>
     <item android:id="@+id/nav_w_my_loan"
-        android:title="Inversiones"
+        android:title="@string/txt_my_loan"
         android:icon="@drawable/ic_outline_business_center_24">
     </item>
     <item android:id="@+id/nav_w_profile"
-        android:title="Perfil"
+        android:title="@string/txt_profile"
         android:icon="@drawable/ic_outline_person_outline_24">
     </item>
 </menu>
