--- a/app/app/src/main/res/layout/fragment_lend.xml
+++ b/app/app/src/main/res/layout/fragment_lend.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:background="@color/background_inside"
             android:paddingBottom="16dp"
-            tools:context=".dashboard">
+            tools:context=".lend">
 
             <TextView
                 android:id="@+id/txt_title_lend"
