--- a/app/app/src/main/res/menu/investor_dash_bar.xml
+++ b/app/app/src/main/res/menu/investor_dash_bar.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/nav_i_home"
-        android:title="Inicio"
+        android:title="@string/txt_home"
         android:icon="@drawable/ic_outline_home_24">
     </item>
     <item android:id="@+id/nav_i_invest"
-        android:title="Invertir"
+        android:title="@string/txt_invest"
         android:icon="@drawable/ic_outline_monetization_on_24">
     </item>
     <item android:id="@+id/nav_i_my_investments"
-        android:title="Mis inversiones"
+        android:title="@string/txt_my_investments"
         android:icon="@drawable/ic_outline_work_outline_24">
     </item>
     <item android:id="@+id/nav_i_profile"
-        android:title="Perfil"
+        android:title="@string/txt_profile"
         android:icon="@drawable/ic_outline_person_outline_24">
     </item>
 </menu>
