--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -15,6 +15,9 @@
     <color name="facebook">#3B5998</color>
     <color name="google">#DB4437</color>
     <color name="gray">#B5BCBCBC</color>
+    <color name="gray_lite">#DCD6D6</color>
+    <color name="yellow_fresh">#FFD38C</color>
+    <color name="loanppi_fresh">#FF6B49</color>
 
     // Buttons
     <color name="btn_white">#BCFFFFFF</color>
